Bug 240257 directory listings show wrong sizes for files > 4 GB changes nsIDirIndex to use PRInt64 r=darin sr=bryner