xpfe/components/directory/nsDirectoryViewer.cpp
@@ -477,12 +477,15 @@ nsHTTPIndex::OnIndexAvailable(nsIRequest* aRequest, nsISupports *aContext,
       if (NS_FAILED(rv)) return rv;
       
       // contentlength
-      PRUint32 size;
+      PRInt64 size;
       rv = aIndex->GetSize(&size);
       if (NS_FAILED(rv)) return rv;
-      if (size != PRUint32(-1)) {
+      if (size != LL_INIT(0, -1)) {
+        PRInt32 intSize;
+        LL_L2I(intSize, size);
+        // XXX RDF should support 64 bit integers (bug 240160)
         nsCOMPtr<nsIRDFInt> val;
-        rv = mDirRDF->GetIntLiteral(size, getter_AddRefs(val));
+        rv = mDirRDF->GetIntLiteral(intSize, getter_AddRefs(val));
         if (NS_FAILED(rv)) return rv;
         rv = Assert(entry, kNC_ContentLength, val, PR_TRUE);
         if (NS_FAILED(rv)) return rv;
